2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: スレッドプールを利用するように変更

2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Program.cs: TESTビルド時は一部のテストだけを実行するように変更
	* openCrypto.NET.csproj: 更新

2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: スレッド数が1でも、新たなスレッドを生成していたのを修正
	(デバッグ用に有効にしていたのを直し忘れてた)

2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* ConfluentWaitHandle.cs: 一度に複数のスレッド数を待機対象に追加するメソッドを追加
	* SymmetricTransform.cs: ECBモード時のマルチスレッド化機能を追加

2007-01-21 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Program.cs:
	- 鍵生成速度計測部分からリソース開放コストを除外
	- 変換速度計測に利用するバッファサイズを拡張

2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Program.cs: NUnitコンソールが動かない環境でも簡易テストを行えるように改良

2006-12-29 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Program.cs: ブロック間暗号モードの速度低下率を計測するプログラムを追加

2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* Program.cs: 変換速度と鍵生成時間計測プログラムを追加

2006-12-27 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: CipherModeを表す変数のアクセサを変更

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmPlus.cs: 実装タイプの初期値を設定

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricAlgorithmPlus.cs: 指定された実装タイプを保持しているか確認するメソッドを追加

2006-12-26 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* CipherImplementationType.cs: 勉強用実装を一覧に追加
	* SourceFiles, Makefile: Rijndaelテストケースを追加

2006-12-25 Kazuki Oikawa <kazuki at panicode.com, g031d019 at edu.soft.iwate-pu.ac.jp>

	* SymmetricTransform.cs: 各種ブロックモード(ECB, CBC, CFB, OFB, CTR)を実装
